# Mandelbrot

./: .clang-format  .clang-tidy  CMakeLists.txt  readme.md
src/: app.cpp  app.hpp  buffer.hpp  glfw_wrapper.cpp  glfw_wrapper.hpp  main.cpp  program.cpp  program.hpp  shader.frag  shader.hpp  vao.hpp
